<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.stockexcoin.stockexcoin.ui.home.NewsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_coin"
        android:name="com.stockexcoin.stockexcoin.ui.coin.CoinFragment"
        android:label="@string/title_coin"
        tools:layout="@layout/fragment_coin"/>


    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.stockexcoin.stockexcoin.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>